# meridiem

./: .gcloudignore  .gitignore  Makefile  README.md  app.yaml  pyproject.toml
.github/workflows/: linters.yaml  publish.yaml
meridiem/: manage.py
meridiem/meridiem/: asgi.py  settings.py  urls.py  wsgi.py
meridiem/utilities/: __init__.py
meridiem/utilities/stamina/: __init__.py
tests/unit/utilities/: __init__.py  test_stamina.py
