[tool.poetry]
name = "meridiem"
version = "0.1.0"
description = ""
authors = ["vichoko <vicenteoyanedel@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
django = "^4.1.5"
mysqlclient = "^2.1.1"
django-psdb-engine = "^1.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
